--- a/PainelControleAndroid/app/src/main/res/values/strings.xml
+++ b/PainelControleAndroid/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">PainelControleAndroid</string>
+    <string name="app_name">Painel de Controle</string>
 </resources>
